--- a/templates/admin/users/list.html.twig
+++ b/templates/admin/users/list.html.twig
@@ -76,7 +76,7 @@
                                             </a>
                                             <form method="post"
                                                   action="{{ path('admin_users_delete', {id: user.id}) }}"
-                                                  style="display: inline;"
+                                                  class="d-inline"
                                                   onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet utilisateur ?')">
                                                 <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
                                                 <button type="submit" class="btn btn-sm btn-outline-danger">
