layout : ajout de veylo

--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -8,10 +8,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-8">
-                    <h1 class="display-4 fw-bold mb-4">Suivi des Engagements de Plaidoyer</h1>
+                    <h1 class="display-4 fw-bold mb-4">Engagements du Plaidoyer Vélo
+                    </h1>
                     <p class="lead mb-4">
-                        Découvrez les propositions portées par les associations et les engagements pris par les listes candidates
+                        Découvrez les propositions portées par les associations du vélo et les engagements pris par les candidates et candidats
                         dans les 28 communes de Bordeaux Métropole.
+                    </p>
+                    <p class="mb-4">
+                        Une fois les éléctions passées, cette plateforme permettra de suivre la mise en place des mesures par les élu·es.
                     </p>
                     <div class="d-flex gap-3">
                         <a href="#categories" class="btn btn-light btn-lg">
