--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
             <div class="container">
                 <a class="navbar-brand fw-bold" href="{{ path('app_home') }}">
-                    <i class="fas fa-handshake me-2"></i>
+                    <i class="fas fa-bicycle me-2"></i>
                     Suivi Plaidoyer
                 </a>
 
