--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,6 +58,11 @@
                                 {% endfor %}
                             </ul>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_progress_tracking_index') }}">
+                                <i class="fas fa-chart-line me-1"></i>Suivi Mandatures
+                            </a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
