site au couleur de bordeaux à vélo !

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}Suivi Plaidoyer{% endblock %}</title>
+        <title>{% block title %}Plaidoyer Vélo Bordeaux{% endblock %}</title>
         <meta name="description" content="Suivi des engagements de plaidoyer des listes candidates dans les communes de Bordeaux Métropole">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>🤝</text></svg>">
 
@@ -20,7 +20,7 @@
             <div class="container">
                 <a class="navbar-brand fw-bold" href="{{ path('app_home') }}">
                     <i class="fas fa-bicycle me-2"></i>
-                    Suivi Plaidoyer
+                    Plaidoyer Vélo Bordeaux
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -80,7 +80,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h5 class="fw-bold">Suivi Plaidoyer</h5>
+                        <h5 class="fw-bold">Plaidoyer Vélo Bordeaux</h5>
                         <p class="mb-0">Plateforme de suivi des engagements des listes candidates dans Bordeaux Métropole.</p>
                     </div>
                     <div class="col-md-6 text-end">
