--- a/templates/public/candidate_lists_index.html.twig
+++ b/templates/public/candidate_lists_index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Listes candidates les plus actives - Suivi Plaidoyer{% endblock %}
+{% block title %}Listes candidates les plus actives - Plaidoyer Vélo Bordeaux{% endblock %}
 
 {% block body %}
 <div class="container-fluid py-4">
