--- a/templates/public/category_show.html.twig
+++ b/templates/public/category_show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ category.name }} - Suivi Plaidoyer{% endblock %}
+{% block title %}{{ category.name }} - Plaidoyer Vélo Bordeaux{% endblock %}
 
 {% block body %}
     <!-- Header Section -->
