--- a/templates/public/cities_index.html.twig
+++ b/templates/public/cities_index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Communes - Suivi Plaidoyer{% endblock %}
+{% block title %}Communes - Plaidoyer Vélo Bordeaux{% endblock %}
 
 {% block body %}
     <!-- Header Section -->
