--- a/templates/public/overview.html.twig
+++ b/templates/public/overview.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Vue d'ensemble - Suivi Plaidoyer{% endblock %}
+{% block title %}Vue d'ensemble - Plaidoyer Vélo Bordeaux{% endblock %}
 
 {% block stylesheets %}
     <style>
