--- a/templates/public/proposition_show.html.twig
+++ b/templates/public/proposition_show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ proposition.title }} - Suivi Plaidoyer{% endblock %}
+{% block title %}{{ proposition.title }} - Plaidoyer Vélo Bordeaux{% endblock %}
 
 {% block body %}
     <!-- Header Section -->
