--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,12 +4,12 @@
 /* Global styles */
 :root {
     /* Primary Colors */
-    --bs-primary: #00aeef;
+    --bs-primary: #fed5b5;
     --bs-btn-bg:  #00aeef;
-    --bs-primary-rgb: 0, 174, 239;
+    --bs-primary-rgb: 48, 94, 180;
 
     /* Color Palette */
-    --color-purple-light: #667eea;
+    --color-purple-light: #481148;
     --color-purple-dark: #764ba2;
     --color-blue: #007bff;
     --color-blue-dark: #0056b3;
