--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion - Suivi Plaidoyer{% endblock %}
+{% block title %}Connexion - Plaidoyer Vélo Bordeaux{% endblock %}
 
 {% block body %}
 <div class="container-fluid vh-100">
@@ -9,7 +9,7 @@
             <div class="text-center">
                 <h1 class="display-4 text-primary mb-4">
                     <i class="fas fa-chart-line me-3"></i>
-                    Suivi Plaidoyer
+                    Plaidoyer Vélo Bordeaux
                 </h1>
                 <p class="lead text-muted">
                     Plateforme de suivi des engagements politiques
